# pytodo

./: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
brax/: app.py  database.py  security.py
brax/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 1e56142840af_create_todos_table.py  7e653c1bbf60_adicionando_created_at_e_updated_at_na_.py  8cc22d6e9a79_create_users_table.py  b9e6ca539d98_create_column_update.py  c4c4d618ce35_adicionando_user_na_tabela_todo.py
pytodo/: app.py  database.py  models.py  schemas.py  security.py
pytodo/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
